# Actix_REST_API

./: Cargo.toml  README.md
db/: Competitions.json  Matches.json  Teams.json
src/: Cargo.toml  main.rs  service.rs
src/controller/: mod.rs
src/service/: database.rs
src/src/: main.rs
src/src/controller/: mod.rs
src/src/service/: mod.rs
