[package]
name = "mongo_db"
version = "0.1.0"
authors = ["MedAmineFouzai <54685665+MedAmineFouzai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0.0-alpha.3"
actix-cors = "0.4.0"
serde = "1.0.103"
serde_json = "1.0.44"
mongodb = "1.0.0"
tokio = "0.2.22"
futures = "0.3.6"
listenfd = "0.3"